--- a/package.json
+++ b/package.json
@@ -1,35 +1,29 @@
 {
-  "name": "nw-builder",
-  "version": "3.4.1",
-  "description": "nw-builder",
+  "name": "nw-builder-bin",
+  "version": "1.0.0",
+  "description": "nw-builder-bin which working with rcedit to modify exe version and fork from https://github.com/nwjs-community/nw-builder",
   "main": "index.js",
   "scripts": {
     "test": "tape test/*.js"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/mllrsohn/nw-builder.git"
+    "url": "git@github.com:wangbbin/nw-builder.git"
   },
   "bin": {
     "nwbuild": "./bin/nwbuild"
   },
   "author": {
-    "name": "Steffen Müller"
+    "name": "binbin"
   },
-  "contributors": [
-    {
-      "name": "Adam Lynch",
-      "email": "contact@adamlynch.com"
-    }
-  ],
   "engines": {
     "node": ">= 4.0.0"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mllrsohn/nw-builder/issues"
+    "url": "https://github.com/wangbbin/nw-builder/issues"
   },
-  "homepage": "https://github.com/mllrsohn/nw-builder",
+  "homepage": "https://github.com/wangbbin/nw-builder",
   "keywords": [
     "NW.js",
     "node-webkit",
